feat: add more filters to kmz page
